Fixed text not wrapping in firebase chat in non mobile view

--- a/less/firebaseChat.less
+++ b/less/firebaseChat.less
@@ -25,6 +25,7 @@
 
         .firebase-chat-sidebar {
             flex: 1;
+            max-width: 350px;
             border-right: 1px solid white;
             background: rgba( 21, 21, 21, 0.65 );
             box-shadow: 0 8px 0 0 rgba( 31, 38, 135, 0.37 );
@@ -161,7 +162,9 @@
 
                 .firebase-user-chat-info {
                     display: flex;
+                    justify-content: space-between;
                     align-items: center;
+                    width: 100%;
                     span {
                         font-size: 18px;
                         font-weight: 500;
@@ -174,6 +177,7 @@
                     p {
                         font-size: 14px;
                         color: lightgray;
+                        margin-left: 5px;
                     }
                 }
             }
@@ -283,13 +287,15 @@
 
                         .firebase-message-content {
                             align-items: flex-end;
+                            word-break: break-all;
+
                         }
 
                         p {
+                            overflow-wrap: break-word;
                             background-color: rgb(118, 190, 250);
                             color: white;
                             border-radius: 10px 0px 10px 10px ;
-                            max-width: max-content;
                         }
                     }
                 }
